log
Fri 12 Aug 2022 12:57:13 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[] n);
      |                     ^
exercises.c:44:13: error: too few arguments to function ‘sumaN’
   44 |   *suma = t-sumaN(a[] n);
      |             ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
b17c33c
Fri 12 Aug 2022 12:58:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[], n);
      |                     ^
Compilation failed
b850b75
Fri 12 Aug 2022 12:58:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:12: error: ‘t’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   44 |   *suma = t-sumaN(a, n);
      |           ~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
05fb24d
Fri 12 Aug 2022 12:58:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: ‘i’ undeclared (first use in this function)
   44 |   *suma = t-sumaN(a[i], n);
      |                     ^
exercises.c:44:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e79632c
Fri 12 Aug 2022 12:59:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[], n);
      |                     ^
Compilation failed
f3b530b
Fri 12 Aug 2022 01:30:53 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[], n);
      |                     ^
exercises.c: In function ‘crearPersona’:
exercises.c:63:4: error: ‘p’ is a pointer; did you mean to use ‘->’?
   63 |   p.nombre=
      |    ^
      |    ->
exercises.c:66:4: error: expected expression before ‘return’
   66 |    return NULL;
      |    ^~~~~~
exercises.c:62:12: error: variable ‘p’ set but not used [-Werror=unused-but-set-variable]
   62 |   Persona* p;
      |            ^
exercises.c: In function ‘sumaV’:
exercises.c:111:10: error: invalid operands to binary + (have ‘Vector *’ and ‘Vector *’)
  111 |   *c = a +b ;
      |          ^
exercises.c: In function ‘crearPersona’:
exercises.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3a4d11f
Mon 15 Aug 2022 02:14:51 AM UTC: 
 exercises.c | 35 ++++++++++++++++++++++++++---------
 1 file changed, 26 insertions(+), 9 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[], n);
      |                     ^
exercises.c: In function ‘crearVector’:
exercises.c:87:5: error: statement with no effect [-Werror=unused-value]
   87 |   v -> capacidad n;
      |   ~~^~~~~~~~~~~~
exercises.c:87:17: error: expected ‘;’ before ‘n’
   87 |   v -> capacidad n;
      |                 ^~
      |                 ;
cc1: all warnings being treated as errors
Compilation failed
293fc10
Mon 15 Aug 2022 02:15:35 AM UTC: 
 exercises.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[], n);
      |                     ^
exercises.c: In function ‘crearVector’:
exercises.c:87:4: error: statement with no effect [-Werror=unused-value]
   87 |   v->capacidad n;
      |   ~^~~~~~~~~~~
exercises.c:87:15: error: expected ‘;’ before ‘n’
   87 |   v->capacidad n;
      |               ^~
      |               ;
cc1: all warnings being treated as errors
Compilation failed
4d66a61
Mon 15 Aug 2022 02:15:50 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[], n);
      |                     ^
exercises.c: In function ‘crearVector’:
exercises.c:87:4: error: statement with no effect [-Werror=unused-value]
   87 |   v->capacidad n;
      |   ~^~~~~~~~~~~
exercises.c:87:15: error: expected ‘;’ before ‘n’
   87 |   v->capacidad n;
      |               ^~
      |               ;
cc1: all warnings being treated as errors
Compilation failed
bf18518
Mon 15 Aug 2022 02:16:09 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[], n);
      |                     ^
Compilation failed
83ee7fb
Mon 15 Aug 2022 02:37:50 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: unused variable ‘t’ [-Werror=unused-variable]
   40 |   int t;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
edd0dc9
